# Coding_Agent

./: .gitignore  README.md  agent.py  main.py  prompts.py  pyproject.toml  requirements.txt  tools.py
code_agent/: agent.py  main.py  prompts.py
code_agent/tools/: file_ops.py  safety.py  schemas.py  shell_ops.py
code_agent/utils/: config.py
tools/: __init__.py  file_ops.py  safety.py  schemas.py  shell_ops.py
utils/: config.py
