[project]
name = "coding-agent"
version = "0.1.0"
description = "Autonomous CLI Coding Agent"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pydantic",
    "pydantic-settings",
    "openai",
    "python-dotenv",
]

[project.scripts]
codeagent = "code_agent.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"